--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,10 @@
                 <action android:name="android.intent.action.SEND"/>
                 <data android:mimeType="image/*"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND_MULTIPLE" />
+                <data android:mimeType="image/*" />
+            </intent-filter>
         </activity>
     </application>
 
