Add URL copying to final notification

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,7 @@
                 android:value=".MainActivity" />
         </activity>
         <service android:name=".UploadService" />
+        <receiver android:name=".ClipboardURLReceiver" />
     </application>
 
 </manifest>
